--- a/src/views/StoreView/css/Store.module.css
+++ b/src/views/StoreView/css/Store.module.css
@@ -71,13 +71,13 @@
 @media only screen and (min-width: 100px) and (max-width: 900px) {
 
 .store {
-	flex: 1.5 1;
+	flex: 1.3 1;
 }
 
 .rampsArea {
 	border-left: 5px dashed orange;
 }
-
+.ramp { width: 95px; }
 .zonesRow { padding-bottom: 10px; }
 
 }
