--- a/src/views/StoreView/css/BottomBar.module.css
+++ b/src/views/StoreView/css/BottomBar.module.css
@@ -19,7 +19,7 @@
 	right: 25px;
 }
 
-.innerPts {
+.innerPts, .innerBonus {
 	font-size: 24px;
 	font-weight:bold;
 	color: #d7d7d7;
@@ -28,56 +28,58 @@
 	text-align: center;
 }
 
-.brain:hover, .muscle:hover {
+.brain:hover, .muscle:hover, .dump:hover {
 	filter: brightness(1.4) saturate(1);
 }
 
-.brain, .muscle {
-	width:90px;
-	height:80px;
+.brain, .muscle, .dump {
+	width:76px;
+	height:76px;
 	background-color:#d2d2d2;
 	cursor: pointer;
 	margin: 0 0 15px 15px;
-	background-position-y: -19px;
-	border-radius: 7px;
+	background-position-y: -16px;
+	border-radius: 3px;
 	border-bottom: 6px solid #a8b7c2;
+	background-repeat: no-repeat;
+	background-image: url(i/sprite3.png);
 }
 
-.brain {
-	background-image: url(i/sprite3.png);
-	background-position-x: -38px;
-	background-repeat: no-repeat;
-}
-	
-.muscle {
-	background-image: url(i/sprite3.png);
-	background-position-x: -148px;
-	background-repeat: no-repeat;
-}
+.brain { background-position-x: -38px; }
+.muscle { background-position-x: -148px; }
+.dump { background-position-x: -357px; }
 	
 .innerCost {
-	background-image: url(i/sprite3.png);
-	background-position-y: -22px;
-	background-position-x: -255px;
-	margin-left:1px;
-	margin-top:2px;
+	/* background-image: url(i/sprite3.png); */
+	/* background-position-y: -20px; */
+	/* background-position-x: -251px; */
+	background: #627d6c;
+	margin-left:3px;
+	margin-top:3px;
 	font-size:19px;
 	font-weight:bold;
 	color:#d7d7d7;
-	width:40px;
+	width:33px;
 	text-align:center;
 }
 
-.bonusClickable {
+.innerBonus {
+	background-image: url(i/sprite3.png);
+	background-position-y: -20px;
+	background-position-x: -305px;
+	margin-left:3px;
+	margin-top:3px;
+	font-size:19px;
+	font-weight:bold;
+	width:33px;
+	height:31px;
+	text-align:center;
+}
+
+.bonusBot {
 	position:absolute;
 	right:140px;
 	top:25px;
-}
-
-.bonusClickable:hover {
-	user-select: none;
-	cursor:pointer;
-	filter: brightness(1.8) saturate(1.6);
 }
 
 
@@ -85,7 +87,7 @@
 @media only screen and (min-width: 100px) and (max-width: 900px) {
 
 .bottombar {
-	height: 45px;
+	height: 50px;
 	padding-top:5px;
 }
 
@@ -105,14 +107,51 @@
 	margin: 3px auto;
 }
 
+.innerBonus {
+	font-size:14px;
+	font-weight:normal;
+	margin-left:3px;
+	margin-top:3px;
+	width:17px;
+	height:20px;;
+	text-align:center;
+	background-image:none !important;
+	background-color: #424ca8;
+	/* border: 3px solid #ff8c55; */
+}
 
-/* bonus is now clickable element */
+.innerCost {
+	font-size:14px;
+	font-weight:normal;
+	margin-left:3px;
+	margin-top:3px;
+	width:22px;
+	text-align:center;
+}
 
-.bonusClickable {
+
+.bonusBot {
 	position:absolute;
 	right:80px;
 	top:10px;
 }
+
+.brain, .muscle, .dump {
+	width:42px;
+	height:42px;
+	background-color:#d2d2d2;
+	cursor: pointer;
+	margin: 0 0 15px 15px;
+	background-position-y: -105px;
+	border-radius: 1px;
+	border-bottom: none !important;
+	background-repeat: no-repeat;
+	background-image: url(i/sprite3.png);
+}
+
+.brain { background-position-x: -38px; }
+.muscle { background-position-x: -93px; }
+.dump { background-position-x: -150px; }
 
 
 }
