--- a/src/views/StoreView/css/Drop.module.css
+++ b/src/views/StoreView/css/Drop.module.css
@@ -1,15 +1,22 @@
-.cover {
+.cover, .ninjaCover {
 	/* transition: all 3s ease-in-out; */
 	left: 0px;
 	top: 0px;
 	bottom: 0px;
 	width: 100%;
-	background: white;
 	opacity: 0.5;
 	display: flex;
 	z-index: 10001;
 	position: absolute;
 	user-select: none;
+}
+
+.cover {
+	background: white;
+}
+
+.ninjaCover {
+	background: springgreen;
 }
 
 @media only screen and (min-width: 100px) and (max-width: 900px) {
