--- a/src/views/StoreView/css/Ramp.module.css
+++ b/src/views/StoreView/css/Ramp.module.css
@@ -10,9 +10,27 @@
 	/* border: 3px dashed #ddd; */
 }
 
+.ninjaLogo {
+	background-color: #fff;
+	width: 42px;
+	height: 42px;
+	background-image: url(i/sprite3.png);
+	background-position-y: -105px;
+	background-position-x: -210px;
+	position: absolute;
+	right: -62px;
+	top: 14px;
+}
+
 @media only screen and (min-width: 100px) and (max-width: 900px) {
+
 	.ramp {
 		height: 53px;
 		width: 95px;
+	}
+
+	.ninjaLogo {
+		right: -50px;
+		top: 6px;
 	}
 }
