--- a/src/views/StoreView/css/Ramp.module.css
+++ b/src/views/StoreView/css/Ramp.module.css
@@ -10,17 +10,21 @@
 	/* border: 3px dashed #ddd; */
 }
 
-.ninjaLogo {
+.ninjaLogo, .ninjaLogo_p, .ninjaLogo_pp, .ninjaLogo_ppp {
 	background-color: #fff;
 	width: 42px;
 	height: 42px;
 	background-image: url(i/sprite3.png);
 	background-position-y: -105px;
-	background-position-x: -210px;
 	position: absolute;
 	right: -62px;
 	top: 14px;
 }
+
+.ninjaLogo { background-position-x: -210px; }
+.ninjaLogo_p { background-position-x: -256px; }
+.ninjaLogo_pp { background-position-x: -306px; }
+.ninjaLogo_ppp { background-position-x: -356px; }
 
 @media only screen and (min-width: 100px) and (max-width: 900px) {
 
@@ -29,7 +33,7 @@
 		width: 95px;
 	}
 
-	.ninjaLogo {
+	.ninjaLogo, .ninjaLogo_p, .ninjaLogo_pp, .ninjaLogo_ppp {
 		right: -50px;
 		top: 6px;
 	}
