--- a/src/views/StoreView/css/BottomBar.module.css
+++ b/src/views/StoreView/css/BottomBar.module.css
@@ -29,12 +29,12 @@
 }
 
 .brain:hover, .muscle:hover, .dump:hover, 
-.ninja_p:hover, .ninja_pp:hover, 
+.ninja_p:hover, .ninja_pp:hover, .thunder:hover,
 .ninja:hover, .shout:hover, .stomp:hover {
 	filter: brightness(1.3) saturate(1);
 }
 
-.brain, .muscle, .dump, 
+.brain, .muscle, .dump, .thunder,
 .ninja, .ninja_p, .ninja_pp, 
 .ninja_ppp, .shout, .stomp {
 	width:76px;
@@ -58,7 +58,28 @@
 .ninja_ppp { background-position-x: -676px; }
 .shout { background-position-x: -975px; }
 .stomp { background-position-x: -890px; }
+.thunder { background-position-x: -810px; }
 	
+.shake { animation: shaker 0.3s; }
+.lightning {
+	background-color: #fff !important;
+	z-index:10000;
+}
+
+@keyframes shaker {
+  0% { transform: translate(1px, 1px) }
+  10% { transform: translate(-1px, -3px) }
+  20% { transform: translate(-2px, 0px) }
+  30% { transform: translate(2px, 3px) }
+  40% { transform: translate(1px, -1px) }
+  50% { transform: translate(-1px, 2px) }
+  60% { transform: translate(-2px, 1px) }
+  70% { transform: translate(2px, 3px) }
+  80% { transform: translate(-1px, -1px) }
+  90% { transform: translate(1px, 2px) }
+  100% { transform: translate(1px, -2px) }
+}
+
 .innerCost {
 	background: #627d6c;
 	margin-left:3px;
