--- a/src/views/StoreView/css/BottomBar.module.css
+++ b/src/views/StoreView/css/BottomBar.module.css
@@ -164,6 +164,8 @@
 	top:10px;
 }
 
+.shout, .stomp, .thunder,
+.ninja_p, .ninja_pp, .ninja_ppp,
 .brain, .muscle, .dump, .ninja {
 	width:42px;
 	height:42px;
@@ -182,5 +184,11 @@
 .dump { background-position-x: -150px; }
 .ninja { background-position-x: -210px; }
 
+.ninja_p { background-position-x: -256px; }
+.ninja_pp { background-position-x: -306px; }
+.ninja_ppp { background-position-x: -357px; }
+.shout { background-position-x: -522px; }
+.stomp { background-position-x: -476px; }
+.thunder { background-position-x: -434px; }
 
 }
